--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="тут має бути опис сторінки, мінімум 140 символів">
         <title>Франшиза туристичної агенції | Створити свійт сайт з підтримкою компанії</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/stylesheet.css">
     </head>
 
     <body class="language-ukr" data-language-id="1">
@@ -66,7 +67,7 @@
                 </div>
                 <div class="baner-wrapper">
                     <div class="baner-inner">
-                    <p class="baner-title">Франшиза туристичної агенції ТАТ</p>
+                    <h1 class="baner-title">Франшиза туристичної агенції ТАТ</h1>
                     </div>
                 </div>
                     
@@ -88,7 +89,7 @@
             <section class="financial-terms">
                 <div class="layout-section-top-wrapper"> 
                 <div class="container-title margin-top-block">
-                    <h1 class="title">Фінансові показники</h1>                    
+                    <h2 class="title">Фінансові показники</h2>                    
                 </div>
                 <div class="container-indicators margin-bottom-block">
                     <div class="indicator">
@@ -122,7 +123,7 @@
             <section class="association-of-countries-and-logos">
                 <div class="layout-section-top-wrapper">
                     <div class="container-title margin-top-block">
-                        <span class="title">TAT – офіційний представник багатьох закордонних операторів</span>                    
+                        <h2 class="title">TAT – офіційний представник багатьох закордонних операторів</h2>                    
                     </div>
                     <div class="container-logo-and-countries margin-bottom-block">
                         <div class="logos-container">
@@ -239,7 +240,7 @@
             <section class="large-number-of-logos">
                 <div class="layout-section-top-wrapper">
                     <div class="container-title margin-top-block">
-                        <span class="title">Вигідні умови співпраці по бронюванню українських туроператорів</span>
+                        <h2 class="title">Вигідні умови співпраці по бронюванню українських туроператорів</h3>
                     </div>
                     <div class="only-logo-container margin-bottom-block">
                         <div class="logos-container">
